# qrcode_detector

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.py  setup.py
cpp/: .gitignore  CMakeLists.txt  CPM.cmake  CodeFinder.cpp  CodeFinder.hpp  ImageBinarization.cpp  install_rpi3_bullseye_toolchain.sh  main.cpp  toolchain-rpi.cmake
cpp/opencv/: CMakeLists.txt
cpp/opencv/opencv2/: opencv_modules.hpp
cpp/prebuilt_opencv/: CMakeLists.txt
cpp/qrcode_detector/: CMakeLists.txt  CodeFinder.cpp
cpp/wrapper/: CMakeLists.txt  qrcode_detector_pybind11.cc
cpp/wrapper/pybind11/: CMakeLists.txt
qrcode_detector/: __init__.py
qrcode_detector/cpp/: .gitignore  CMakeLists.txt
qrcode_detector/cpp/example/: CMakeLists.txt
qrcode_detector/cpp/opencv/: .gitignore  CMakeLists.txt
qrcode_detector/cpp/qrcode_detector/: CodeFinder.cpp  CodeFinder.hpp
qrcode_detector/cpp/wrapper/: CMakeLists.txt
qrcode_detector/cpp/wrapper/pybind11/: CMakeLists.txt
